Final commit for version 2.6.0 RC1

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,119 @@
+commit 916f3c901bb9da2ac5cd426e113372e1d45996a2
+Merge: 888d28e 5159854
+Author: amazzini <andrea.mazzini@nokia.com>
+Date:   Fri Jul 26 17:49:55 2024 +0200
+
+    Merge remote-tracking branch 'Main/develop' into develop
+
+commit 888d28e0cd70e9215accdc90501f1eff533e809a
+Author: amazzini <andrea.mazzini@nokia.com>
+Date:   Fri Jul 26 17:44:02 2024 +0200
+
+    Third commit towards 2.6.0 version, some corrections
+
+commit 05b6daac6381a6252ec7fb51c8ed76af4915f7ca
+Author: amazzini <andrea.mazzini@nokia.com>
+Date:   Thu Jul 25 19:21:00 2024 +0200
+
+    Second commit towards 2.6.0 version, including OAS modules
+
+commit 23c8e109ea4e0ebe7aa8d1fd7db40eb9d9205e74
+Author: amazzini <andrea.mazzini@nokia.com>
+Date:   Thu Jul 25 19:12:33 2024 +0200
+
+    First commit towards 2.6.0 version
+
+commit 431a423ffafbfa7a3ee85dff2ea4f876a37f49a0
+Author: amazzini <andrea.mazzini@nokia.com>
+Date:   Wed Jun 12 15:50:09 2024 +0200
+
+    Updated README
+
+commit 5159854d6309c70304c91d9f22789e843e3ef2a3
+Merge: 9b526c1 1513fa0
+Author: nigel-r-davis <ndavis@ciena.com>
+Date:   Tue Jun 11 10:20:22 2024 +0100
+
+    Merge pull request #587 from amazzini/develop
+    
+    Updated README for release in progress
+
+commit 1513fa0ab112759157cdaa496351444a27a1c61f
+Author: amazzini <andrea.mazzini@nokia.com>
+Date:   Thu Jun 6 15:25:48 2024 +0200
+
+    Updated README for release in progress
+    
+    With new LF/ONMI links
+
+commit 9b526c1641222b0d81d019564f9b3f7808dffd6e
+Merge: 0582e47 c19935a
+Author: amazzini <andrea.mazzini@nokia.com>
+Date:   Tue May 14 15:10:26 2024 +0200
+
+    Merge pull request #570 from amazzini/develop
+    
+    Test of the migration ONF --> LF/ONMI
+
+commit c19935a3d74d138ea96e89f303d34eccdc1bfc0d
+Author: amazzini <andrea.mazzini@nokia.com>
+Date:   Tue May 14 12:12:48 2024 +0200
+
+    Test of the migration ONF --> LF/ONMI
+
+commit 0582e47befffa0748c730a1027c17e9f5b55f910
+Merge: 4545aa9 56f5597
+Author: nigel-r-davis <ndavis@ciena.com>
+Date:   Tue Dec 5 10:55:58 2023 +0000
+
+    Merge pull request #567 from amazzini/develop
+    
+    OAS modules generated with version 1.1.14 of the tool
+
+commit 56f5597190c47a1ed1c04f567eb2fa7772e18656
+Author: amazzini <andrea.mazzini@nokia.com>
+Date:   Mon Dec 4 15:45:28 2023 +0100
+
+    OAS modules generated with version 1.1.14 of the tool
+    
+    Previously used the tool version 2.0, which was found defected
+
+commit 4545aa9171664cd1a0aaa16cf166b391cf663102
+Merge: 65bcbe4 dd936db
+Author: nigel-r-davis <ndavis@ciena.com>
+Date:   Tue Nov 21 13:47:53 2023 +0000
+
+    Merge pull request #566 from amazzini/develop
+    
+    Corrected links in README
+
+commit dd936db3e4db7e454926d6e29524811a89b02484
+Author: amazzini <andrea.mazzini@nokia.com>
+Date:   Fri Nov 17 09:13:49 2023 +0100
+
+    Corrected (2nd time) README
+
+commit 9b71167956c20eb90e51f9f8914169910b5e8eef
+Author: amazzini <andrea.mazzini@nokia.com>
+Date:   Fri Nov 17 09:00:37 2023 +0100
+
+    Corrected links in README
+
+commit 65bcbe4bcab2d39dca5e8c9a06eb43ff6a5805d5
+Merge: c967b05 65175bd
+Author: nigel-r-davis <ndavis@ciena.com>
+Date:   Fri Nov 3 13:42:15 2023 +0000
+
+    Merge pull request #565 from amazzini/develop
+    
+    last changelog for 2.5.0
+
+commit 65175bd70d7563b736f528a8705f3ca7563662d3
+Author: amazzini <andrea.mazzini@nokia.com>
+Date:   Fri Nov 3 09:57:38 2023 +0100
+
+    last changelog for 2.5.0
+
 commit c967b052b963198b6cc4ae189378107a0924c324
 Merge: 5063238 f4ff7b2
 Author: amazzini <andrea.mazzini@nokia.com>
